syntax = "proto3";

package pb;

option go_package= "./pb";

//req resp
message VerifyEmailReq{
  string email =1;
//  验证图片
//  string key =2;
//  string value =3;
}
message VerifyEmailResp {
}

message VerifyImageReq{
}
message VerifyImageResp{
  string imageUrl =1;
}

//service
service verification {
    rpc  verifyEmail(VerifyEmailReq) returns(VerifyEmailResp);
    rpc verifyImage(VerifyImageReq) returns(VerifyImageResp);
}